Incremental Generation MC-Style